GPU/CPU opencl mixed rendering makes tile artifacts with brick texture. #53365

Closed
opened 2017-11-21 03:57:42 +01:00 by iszotic · 6 comments

System Information
Kubuntu 16.04.3 kernel 4.10 AMDGPUpro 17.30
CPU AMD R7 1700
GPU AMD Rx 480 8gb

Blender Version
Broken: 68994-119846a6bb3
Worked: Not use GPU/CPU mixed rendering

Short description of error

brick texture is broken with GPU/CPU opencl mixed rendering

I have seen these tiles artifacts with other textures, but it's pretty subtle and easy to retouch, in this case It's pretty hard to fix even with image editing.
It's worse when you set 2 threads (1 CPU thread/1 GPU thread)

Exact steps for others to reproduce the error

  1. make a plane, UV unwrap it
  2. assign a new material, then add brick texture node and a diffuse node, set the texture color to the diffuse color input
  3. add some lights, then render

bricks.jpg

brick texture.blend

**System Information** Kubuntu 16.04.3 kernel 4.10 AMDGPUpro 17.30 CPU AMD R7 1700 GPU AMD Rx 480 8gb **Blender Version** Broken: 68994-119846a6bb3 Worked: Not use GPU/CPU mixed rendering **Short description of error** brick texture is broken with GPU/CPU opencl mixed rendering I have seen these tiles artifacts with other textures, but it's pretty subtle and easy to retouch, in this case It's pretty hard to fix even with image editing. It's worse when you set 2 threads (1 CPU thread/1 GPU thread) **Exact steps for others to reproduce the error** 1) make a plane, UV unwrap it 2) assign a new material, then add brick texture node and a diffuse node, set the texture color to the diffuse color input 3) add some lights, then render ![bricks.jpg](https://archive.blender.org/developer/F1165162/bricks.jpg) [brick texture.blend](https://archive.blender.org/developer/F1165164/brick_texture.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @iszotic

Added subscriber: @iszotic

This issue was referenced by blender/cycles@2965196b68

This issue was referenced by blender/cycles@2965196b682816799f0c77f17baba3979d520b78
Member

Added subscriber: @MaiLavelle

Added subscriber: @MaiLavelle
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Mai Lavelle self-assigned this 2017-11-21 10:44:00 +01:00
Member

Fixed by 9325b9bf15

Fixed by 9325b9bf1539bcc440be03c3c360e0b7dd9dc3e7
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53365
No description provided.