intern/cycles/kernel/svm/svm_brick.h
@@ -18,9 +18,9 @@ CCL_NAMESPACE_BEGIN
 
 /* Brick */
 
-ccl_device_noinline float brick_noise(int n) /* fast integer noise */
+ccl_device_noinline float brick_noise(uint n) /* fast integer noise */
 {
-	int nn;
+	uint nn;
 	n = (n + 1013) & 0x7fffffff;
 	n = (n >> 13) ^ n;
 	nn = (n * (n * n * 60493 + 19990303) + 1376312589) & 0x7fffffff;
